

Slick 7.x-2.0-dev, 2014-09-3
----------------------------
Added dummy/placeholder image to lazyLoad progressive.
Fixed for when lazyLoad is disabled, to allow sharing to Pinterest for small
  slides.

Updated slick.colorbox.js to work with asNavFor.
Added new theme slick_wrapper to hold asNavFor, two slicks with thumbnail
  navigation.
Issue #2325225 by scottalan: Added Slider as Nav for as the only last option
  left for version 1.3.7.

Updated from v1.3.6 to v1.3.7

Slick 7.x-2.0-dev, 2014-08-4
----------------------------
Fixed for duplicated .slick__arrow on resizing.

Slick 7.x-2.0-dev, 2014-08-2
----------------------------
issue #2309681 by immoreel: Added support for Omega 3 expecting classes_array.
Do not output slide__media wrapper if no main image and caption available. The
  case, e.g., main image left empty, and overlay image/media populated.

Slick 7.x-2.0-dev, 2014-07-25
-----------------------------
Added empty_option to Lazyload to allow sharing to Pinterest for small slides,
  since current Lazyload is a must, and img SRC attributes is always empty.

Slick 7.x-2.0-dev, 2014-07-24
-----------------------------
Issue #2308591 by jmuzz:
- Fixed for specificity of breakpoints states.
- Remove wasted breakpoint dependent options if disabled, even if not empty.
- Fixed CSS overriden checkboxes for admin settings.

Slick 7.x-2.0-dev, 2014-07-18
-----------------------------
Dropped slick-carousel.tpl.php, template_preprocess_slick_carousel() from
  slick.theme.inc
Dropped deprecated theme_slick_carousel() in favor of the unified theme_slick()
  for custom coded, Field formatter and Views for easy maintenance.

Slick 7.x-2.0-dev, 2014-07-13
-----------------------------
Added color_field support to Field Collection to colorize the slide text.
Fixed for Strict warning: Declaration of SlickViewsPluginStyleSlick::render()
  should be compatible with views_plugin_style::render() in
  _registry_check_code() (line 3139 ..., neglecting coder sniffs: "No scope