@@ -8,7 +8,6 @@
   border: 1px solid #9bacc3;
   *zoom: 1;
   -webkit-box-shadow: 0 0 0 4px #ddf5fb;
-  -moz-box-shadow: 0 0 0 4px #ddf5fb;
   box-shadow: 0 0 0 4px #ddf5fb;
   margin: 30px 0;
 }
