@@ -187,7 +187,6 @@ body {
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 0 0.1em 0.1em rgba(0, 0, 0, 0.2) inset, 0 0.45em 0 0.1em rgba(0, 0, 0, 0.05) inset;
-  -moz-box-shadow: 0 0.1em 0.1em rgba(0, 0, 0, 0.2) inset, 0 0.45em 0 0.1em rgba(0, 0, 0, 0.05) inset;
   box-shadow: 0 0.1em 0.1em rgba(0, 0, 0, 0.2) inset, 0 0.45em 0 0.1em rgba(0, 0, 0, 0.05) inset;
   display: inline-block;
   font-size: 150%;
@@ -195,8 +194,6 @@ body {
   margin: 0;
   overflow: hidden;
   -webkit-transition-duration: 0.4s;
-  -moz-transition-duration: 0.4s;
-  -o-transition-duration: 0.4s;
   transition-duration: 0.4s;
   -webkit-transition-property: padding, width, background-position, text-indent;
   -moz-transition-property: padding, width, background-position, text-indent;
@@ -232,7 +229,6 @@ body {
   background-image: -o-linear-gradient(rgba(0, 0, 0, 0.2), transparent);
   background-image: linear-gradient(rgba(0, 0, 0, 0.2), transparent);
   -webkit-box-shadow: 0 0.1em 0.1em 0.1em rgba(255, 255, 255, 0.8) inset, 0 0 0.5em rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 0.1em 0.1em 0.1em rgba(255, 255, 255, 0.8) inset, 0 0 0.5em rgba(0, 0, 0, 0.3);
   box-shadow: 0 0.1em 0.1em 0.1em rgba(255, 255, 255, 0.8) inset, 0 0 0.5em rgba(0, 0, 0, 0.3);
   border: 1px solid rgba(0, 0, 0, 0.35);
   border-radius: inherit;
@@ -250,7 +246,6 @@ body {
 }
 .form--slick input[type="checkbox"]:focus ~ .field-suffix {
   -webkit-box-shadow: 0 0.1em 0.1em rgba(0, 0, 0, 0.2) inset, 0 0.45em 0 0.1em rgba(0, 0, 0, 0.05) inset, 0 0 0.4em 1px #6ad3ef;
-  -moz-box-shadow: 0 0.1em 0.1em rgba(0, 0, 0, 0.2) inset, 0 0.45em 0 0.1em rgba(0, 0, 0, 0.05) inset, 0 0 0.4em 1px #6ad3ef;
   box-shadow: 0 0.1em 0.1em rgba(0, 0, 0, 0.2) inset, 0 0.45em 0 0.1em rgba(0, 0, 0, 0.05) inset, 0 0 0.4em 1px #6ad3ef;
 }
 .form--slick input[type="checkbox"][disabled] ~ .field-suffix:before,
@@ -404,10 +399,7 @@ html.js .form--slick .collapsible .fieldset-legend .fieldset-legend-prefix {
   top: 0;
   vertical-align: middle;
   width: 36px;
-  -webkit-transition: background 0.3s 0.5s;
-  -webkit-transition-delay: ease;
-  -moz-transition: background 0.3s 0.5s ease;
-  -o-transition: background 0.3s 0.5s ease;
+  -webkit-transition: background 0.3s 0.5s ease;
   transition: background 0.3s 0.5s ease;
 }
 html.js .form--slick .collapsible .fieldset-legend .fieldset-legend-prefix:before, html.js .form--slick .collapsible .fieldset-legend .fieldset-legend-prefix:after {
@@ -426,10 +418,7 @@ html.js .form--slick .collapsible .fieldset-legend .fieldset-legend-prefix:befor
   -ms-transform-origin: 50% 50% 50%;
   -o-transform-origin: 50% 50% 50%;
   transform-origin: 50% 50% 50%;
-  -webkit-transition: top 0.3s 0.6s, -webkit-transform 0.3s ease;
-  -webkit-transition-delay: ease, 0s;
-  -moz-transition: top 0.3s 0.6s ease, -moz-transform 0.3s ease;
-  -o-transition: top 0.3s 0.6s ease, -o-transform 0.3s ease;
+  -webkit-transition: top 0.3s 0.6s ease, transform 0.3s ease;
   transition: top 0.3s 0.6s ease, transform 0.3s ease;
 }
 html.js .form--slick .collapsible .fieldset-legend .fieldset-legend-prefix:before {
@@ -457,10 +446,7 @@ html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix {
   background: #bbc6d6;
 }
 html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix:before, html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix:after {
-  -webkit-transition: top 0.3s ease, -webkit-transform 0.3s 0.5s;
-  -webkit-transition-delay: 0s, ease;
-  -moz-transition: top 0.3s ease, -moz-transform 0.3s 0.5s ease;
-  -o-transition: top 0.3s ease, -o-transform 0.3s 0.5s ease;
+  -webkit-transition: top 0.3s ease, transform 0.3s 0.5s ease;
   transition: top 0.3s ease, transform 0.3s 0.5s ease;
   top: 16px;
   width: 18px;
@@ -493,7 +479,6 @@ html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix:after {
   border-radius: 2px;
   bottom: 120%;
   -webkit-box-shadow: 0 2px 10px -2px black;
-  -moz-box-shadow: 0 2px 10px -2px black;
   box-shadow: 0 2px 10px -2px black;
   color: #dadada !important;
   display: block;
@@ -508,10 +493,7 @@ html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix:after {
   overflow: hidden;
   right: 0;
   visibility: hidden;
-  -webkit-transition: all 0.4s ease-in;
-  -webkit-transition-delay: 0s;
-  -moz-transition: all 0.4s ease-in 0s;
-  -o-transition: all 0.4s ease-in 0s;
+  -webkit-transition: all 0.4s ease-in 0s;
   transition: all 0.4s ease-in 0s;
   text-align: left;
   white-space: normal;
@@ -624,7 +606,6 @@ html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix:after {
 .form--slick .form-item .form-textarea {
   border: 1px solid #dadada;
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07) inset;
-  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07) inset;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07) inset;
   line-height: 22px;
   min-height: 22px;
@@ -706,10 +687,7 @@ html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix:after {
   max-width: 50px;
 }
 .form--slick .form-item.form-type-textfield .js-expandable {
-  -webkit-transition: width 0.6s ease-out, max-width 0.5s linear;
-  -webkit-transition-delay: 0.8s, 0s;
-  -moz-transition: width 0.6s ease-out 0.8s, max-width 0.5s linear 0s;
-  -o-transition: width 0.6s ease-out 0.8s, max-width 0.5s linear 0s;
+  -webkit-transition: width 0.6s ease-out 0.8s, max-width 0.5s linear 0s;
   transition: width 0.6s ease-out 0.8s, max-width 0.5s linear 0s;
 }
 .form--slick .form-item.form-type-textfield.js-on-focus {
