@@ -11,7 +11,6 @@
 .form--slick .fieldset--responsive .fieldset--settings {
   border-radius: 0;
   -webkit-box-shadow: 0 0 0 4px #f9f9f9;
-  -moz-box-shadow: 0 0 0 4px #f9f9f9;
   box-shadow: 0 0 0 4px #f9f9f9;
   clear: both;
   float: left;
