@@ -66,10 +66,7 @@
   width: 80px;
   visibility: hidden;
   z-index: 9;
-  -webkit-transition: visibility 0s linear, opacity 0.5s linear;
-  -webkit-transition-delay: 0.5s, 0s;
-  -moz-transition: visibility 0s linear 0.5s, opacity 0.5s linear;
-  -o-transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+  -webkit-transition: visibility 0s linear 0.5s, opacity 0.5s linear;
   transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 }
 
@@ -111,8 +108,6 @@
 
 .media:hover .media-icon--colorbox {
   -webkit-transition-delay: 0s;
-  -moz-transition-delay: 0s;
-  -o-transition-delay: 0s;
   transition-delay: 0s;
 }
 
