@@ -13,19 +13,13 @@
   margin: 10px;
   overflow: hidden;
   position: relative;
-  -webkit-transition: box-shadow 0.3s 0.5s, border 0.3s 0.5s;
-  -webkit-transition-delay: ease, ease;
-  -moz-transition: box-shadow 0.3s 0.5s ease, border 0.3s 0.5s ease;
-  -o-transition: box-shadow 0.3s 0.5s ease, border 0.3s 0.5s ease;
+  -webkit-transition: box-shadow 0.3s 0.5s ease, border 0.3s 0.5s ease;
   transition: box-shadow 0.3s 0.5s ease, border 0.3s 0.5s ease;
 }
 .slick--skin--boxed-carousel .slide__content:hover {
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
   -webkit-transition-delay: 0s;
-  -moz-transition-delay: 0s;
-  -o-transition-delay: 0s;
   transition-delay: 0s;
   border-color: #9bacc3;
 }
