@@ -3,3 +3,11 @@
   font-size: $font-size;
   font-size: ($font-size / $base-font-size)*1rem;
 }
+
+@mixin user-select($value: text) {
+     -moz-user-select: text;
+      -ms-user-select: text;
+       -o-user-select: text;
+  -webkit-user-select: text;
+          user-select: text;
+}
